--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.13 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -466,7 +466,7 @@ menu {
 }
 
 /*
-Reset default styling for dialogs
+Reset default styling for dialogs.
 */
 
 dialog {
@@ -550,7 +550,7 @@ video {
 
 /* Make elements with the HTML hidden attribute stay hidden by default */
 
-[hidden] {
+[hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
 
@@ -639,6 +639,10 @@ video {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-2 {
@@ -769,10 +773,6 @@ video {
   max-width: 48rem;
 }
 
-.max-w-5xl {
-  max-width: 64rem;
-}
-
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -859,12 +859,6 @@ video {
   gap: 2rem;
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -915,10 +909,6 @@ video {
   border-color: rgb(0 160 255 / 0.3);
 }
 
-.border-blue-primary\/20 {
-  border-color: rgb(0 87 255 / 0.2);
-}
-
 .border-default {
   border-color: rgba(80, 80, 120, 0.4);
 }
@@ -951,23 +941,19 @@ video {
   background-color: rgba(15,15,25,0.75);
 }
 
-.bg-bg-dark\/80 {
-  background-color: rgb(10 10 24 / 0.8);
-}
-
 .bg-bg-darker {
   --tw-bg-opacity: 1;
-  background-color: rgb(5 5 13 / var(--tw-bg-opacity));
+  background-color: rgb(5 5 13 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-bright {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 160 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 160 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 87 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 87 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-primary\/10 {
@@ -978,17 +964,12 @@ video {
   background-color: rgba(15, 15, 30, 0.7);
 }
 
-.bg-card\/50 {
-  background-color: rgba(15, 15, 30, 0.5);
+.bg-card\/30 {
+  background-color: rgba(15, 15, 30, 0.3);
 }
 
 .bg-card\/80 {
   background-color: rgba(15, 15, 30, 0.8);
-}
-
-.bg-purple-warpcast {
-  --tw-bg-opacity: 1;
-  background-color: rgb(138 99 210 / var(--tw-bg-opacity));
 }
 
 .bg-purple-warpcast\/10 {
@@ -1005,10 +986,6 @@ video {
 
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .from-bg-dark {
@@ -1029,18 +1006,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-blue-primary\/10 {
-  --tw-gradient-from: rgb(0 87 255 / 0.1) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 87 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-bg-darker {
   --tw-gradient-to: #05050d var(--tw-gradient-to-position);
-}
-
-.to-purple-warpcast\/10 {
-  --tw-gradient-to: rgb(138 99 210 / 0.1) var(--tw-gradient-to-position);
 }
 
 .to-transparent {
@@ -1053,10 +1020,6 @@ video {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
 }
 
 .px-3 {
@@ -1187,30 +1150,22 @@ video {
 
 .text-blue-bright {
   --tw-text-opacity: 1;
-  color: rgb(0 160 255 / var(--tw-text-opacity));
+  color: rgb(0 160 255 / var(--tw-text-opacity, 1));
 }
 
 .text-purple-warpcast {
   --tw-text-opacity: 1;
-  color: rgb(138 99 210 / var(--tw-text-opacity));
+  color: rgb(138 99 210 / var(--tw-text-opacity, 1));
 }
 
 .text-text-muted {
   --tw-text-opacity: 1;
-  color: rgb(204 204 221 / var(--tw-text-opacity));
+  color: rgb(204 204 221 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.placeholder-text-muted\/70::-moz-placeholder {
-  color: rgb(204 204 221 / 0.7);
-}
-
-.placeholder-text-muted\/70::placeholder {
-  color: rgb(204 204 221 / 0.7);
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .opacity-70 {
@@ -1358,7 +1313,7 @@ video {
 
 .hover\:bg-\[\#0046cc\]:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 70 204 / var(--tw-bg-opacity));
+  background-color: rgb(0 70 204 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-blue-primary\/20:hover {
@@ -1371,10 +1326,6 @@ video {
 
 .hover\:bg-purple-warpcast\/30:hover {
   background-color: rgb(138 99 210 / 0.3);
-}
-
-.hover\:bg-purple-warpcast\/90:hover {
-  background-color: rgb(138 99 210 / 0.9);
 }
 
 .hover\:bg-white\/5:hover {
@@ -1420,21 +1371,6 @@ video {
   left: 100%;
 }
 
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-blue-primary\/30:focus {
-  --tw-ring-color: rgb(0 87 255 / 0.3);
-}
-
 @media (min-width: 640px) {
   .sm\:mb-0 {
     margin-bottom: 0px;
@@ -1444,12 +1380,12 @@ video {
     margin-bottom: 3rem;
   }
 
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
+  .sm\:mb-16 {
+    margin-bottom: 4rem;
   }
 
-  .sm\:mb-3 {
-    margin-bottom: 0.75rem;
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .sm\:mb-4 {
@@ -1554,22 +1490,12 @@ video {
     margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
   }
 
-  .sm\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-  }
-
   .sm\:p-5 {
     padding: 1.25rem;
   }
 
   .sm\:p-6 {
     padding: 1.5rem;
-  }
-
-  .sm\:p-8 {
-    padding: 2rem;
   }
 
   .sm\:px-4 {
@@ -1660,8 +1586,8 @@ video {
     margin-bottom: 0.5rem;
   }
 
-  .md\:mb-3 {
-    margin-bottom: 0.75rem;
+  .md\:mb-20 {
+    margin-bottom: 5rem;
   }
 
   .md\:mb-4 {
@@ -1700,20 +1626,12 @@ video {
     width: 650px;
   }
 
-  .md\:flex-1 {
-    flex: 1 1 0%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
   }
 
   .md\:gap-12 {
@@ -1724,28 +1642,10 @@ video {
     gap: 1.5rem;
   }
 
-  .md\:gap-8 {
-    gap: 2rem;
-  }
-
   .md\:space-y-12 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(3rem * var(--tw-space-y-reverse));
-  }
-
-  .md\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-  }
-
-  .md\:p-10 {
-    padding: 2.5rem;
-  }
-
-  .md\:p-6 {
-    padding: 1.5rem;
   }
 
   .md\:p-8 {
@@ -1790,6 +1690,11 @@ video {
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:text-6xl {
