--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.13 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -550,7 +550,7 @@ video {
 
 /* Make elements with the HTML hidden attribute stay hidden by default */
 
-[hidden]:where(:not([hidden="until-found"])) {
+[hidden] {
   display: none;
 }
 
@@ -612,12 +612,20 @@ video {
   left: 0px;
 }
 
+.left-\[-100\%\] {
+  left: -100%;
+}
+
 .right-0 {
   right: 0px;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .z-\[100\] {
@@ -639,6 +647,10 @@ video {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-12 {
@@ -665,8 +677,20 @@ video {
   margin-bottom: 2rem;
 }
 
+.ml-1\.5 {
+  margin-left: 0.375rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
 }
 
 .mt-3 {
@@ -705,6 +729,10 @@ video {
   display: none;
 }
 
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
 .h-1\.5 {
   height: 0.375rem;
 }
@@ -713,12 +741,24 @@ video {
   height: 2.5rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .h-3 {
   height: 0.75rem;
 }
 
+.h-3\.5 {
+  height: 0.875rem;
+}
+
 .h-4 {
   height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
@@ -753,8 +793,20 @@ video {
   width: 2.5rem;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
+.w-3\.5 {
+  width: 0.875rem;
+}
+
 .w-4 {
   width: 1rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-6 {
@@ -859,6 +911,12 @@ video {
   gap: 2rem;
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -943,17 +1001,17 @@ video {
 
 .bg-bg-darker {
   --tw-bg-opacity: 1;
-  background-color: rgb(5 5 13 / var(--tw-bg-opacity, 1));
+  background-color: rgb(5 5 13 / var(--tw-bg-opacity));
 }
 
 .bg-blue-bright {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 160 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(0 160 255 / var(--tw-bg-opacity));
 }
 
 .bg-blue-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 87 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(0 87 255 / var(--tw-bg-opacity));
 }
 
 .bg-blue-primary\/10 {
@@ -984,8 +1042,16 @@ video {
   background-color: transparent;
 }
 
+.bg-white\/10 {
+  background-color: rgb(255 255 255 / 0.1);
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .from-bg-dark {
@@ -1006,8 +1072,18 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-blue-primary\/20 {
+  --tw-gradient-from: rgb(0 87 255 / 0.2) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 87 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-bg-darker {
   --tw-gradient-to: #05050d var(--tw-gradient-to-position);
+}
+
+.to-purple-warpcast\/20 {
+  --tw-gradient-to: rgb(138 99 210 / 0.2) var(--tw-gradient-to-position);
 }
 
 .to-transparent {
@@ -1022,6 +1098,10 @@ video {
   padding: 1.25rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1030,6 +1110,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-12 {
@@ -1150,22 +1235,22 @@ video {
 
 .text-blue-bright {
   --tw-text-opacity: 1;
-  color: rgb(0 160 255 / var(--tw-text-opacity, 1));
+  color: rgb(0 160 255 / var(--tw-text-opacity));
 }
 
 .text-purple-warpcast {
   --tw-text-opacity: 1;
-  color: rgb(138 99 210 / var(--tw-text-opacity, 1));
+  color: rgb(138 99 210 / var(--tw-text-opacity));
 }
 
 .text-text-muted {
   --tw-text-opacity: 1;
-  color: rgb(204 204 221 / var(--tw-text-opacity, 1));
+  color: rgb(204 204 221 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .opacity-70 {
@@ -1206,6 +1291,10 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .before\:absolute::before {
@@ -1313,7 +1402,7 @@ video {
 
 .hover\:bg-\[\#0046cc\]:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 70 204 / var(--tw-bg-opacity, 1));
+  background-color: rgb(0 70 204 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-primary\/20:hover {
@@ -1348,12 +1437,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-\[0_0_20px_rgba\(0\2c 87\2c 255\2c 0\.4\)\]:hover {
-  --tw-shadow: 0 0 20px rgba(0,87,255,0.4);
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-\[0_0_20px_rgba\(138\2c 99\2c 210\2c 0\.4\)\]:hover {
   --tw-shadow: 0 0 20px rgba(138,99,210,0.4);
   --tw-shadow-colored: 0 0 20px var(--tw-shadow-color);
@@ -1366,8 +1449,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-\[0_0_30px_rgba\(0\2c 87\2c 255\2c 0\.5\)\]:hover {
+  --tw-shadow: 0 0 30px rgba(0,87,255,0.5);
+  --tw-shadow-colored: 0 0 30px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:before\:left-\[100\%\]:hover::before {
   content: var(--tw-content);
+  left: 100%;
+}
+
+.group:hover .group-hover\:left-\[100\%\] {
   left: 100%;
 }
 
@@ -1398,6 +1491,10 @@ video {
 
   .sm\:mb-8 {
     margin-bottom: 2rem;
+  }
+
+  .sm\:ml-3 {
+    margin-left: 0.75rem;
   }
 
   .sm\:mt-0 {
@@ -1480,10 +1577,6 @@ video {
     gap: 1.5rem;
   }
 
-  .sm\:gap-8 {
-    gap: 2rem;
-  }
-
   .sm\:space-y-10 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1496,6 +1589,15 @@ video {
 
   .sm\:p-6 {
     padding: 1.5rem;
+  }
+
+  .sm\:p-8 {
+    padding: 2rem;
+  }
+
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .sm\:px-4 {
@@ -1606,6 +1708,10 @@ video {
     height: 3rem;
   }
 
+  .md\:h-5 {
+    height: 1.25rem;
+  }
+
   .md\:h-7 {
     height: 1.75rem;
   }
@@ -1614,8 +1720,16 @@ video {
     height: 300px;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:w-12 {
     width: 3rem;
+  }
+
+  .md\:w-5 {
+    width: 1.25rem;
   }
 
   .md\:w-7 {
@@ -1626,12 +1740,12 @@ video {
     width: 650px;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:gap-12 {
@@ -1650,6 +1764,11 @@ video {
 
   .md\:p-8 {
     padding: 2rem;
+  }
+
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:px-4 {
@@ -1675,6 +1794,11 @@ video {
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
+  }
+
+  .md\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   .md\:py-8 {
